Use the right CB size to resolve percentages in vertical writing mode

Currently percentages in 'top' and 'bottom' are resolved with respect to
the width of the containing block if the positioned element has a
vertical writing mode, and percentages in 'left' and 'right' are
resolved with respect to the height of the containing block if the CB
has a vertical writing mode.

The change only affects the value returned by getComputedStyle, the used
value was already correct.

BUG=883582

TEST=external/wpt/css/cssom/getComputedStyle-insets-absolute.html
TEST=external/wpt/css/cssom/getComputedStyle-insets-fixed.html
TEST=external/wpt/css/cssom/getComputedStyle-insets-relative.html
TEST=external/wpt/css/cssom/getComputedStyle-insets-sticky.html

Tests for absolute and fixed positionings still have some failures due
to http://crbug.com/883574 and http://crbug.com/888532.

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: I06bff26e9ef36dc74686627e7752794b83e63dfb
Reviewed-on: https://chromium-review.googlesource.com/1240283
Commit-Queue: Oriol Brufau <obrufau@igalia.com>
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Cr-Commit-Position: refs/heads/master@{#594171}
Former-commit-id: e35686989389384250a10dd2f1d7451d123d1a8e